--- a/common-demo/build.gradle
+++ b/common-demo/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 
     api project(':common-redis')
     api project(':common-zk')
+    api project(':common-rabbitmq')
 
     testCompile ("junit:junit:$junitVersion")
     compile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
