--- a/common-demo/src/main/resources/application-dev.properties
+++ b/common-demo/src/main/resources/application-dev.properties
@@ -1,1 +1,1 @@
-spring.config.import=config/dev/redis.properties,config/dev/zk.properties
+spring.config.import=config/dev/redis.properties,config/dev/zk.properties,config/dev/rabbitmq.properties
