--- a/common-util/build.gradle
+++ b/common-util/build.gradle
@@ -8,7 +8,7 @@ version '1.0.0'
 sourceCompatibility = 1.8
 
 ext{
-    springBootVersion = '2.6.4'
+    springBootVersion = '2.6.5'
     caffeineVersion= '3.0.5'
     httpclientVersion= '4.5.13'
     gsonVersion= '2.9.0'
@@ -18,6 +18,7 @@ ext{
 
 dependencies {
 
+    api project(':common-api')
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
     compile("org.springframework.boot:spring-boot-starter-aop:$springBootVersion")
 
@@ -41,4 +42,8 @@ publishing {
 
 test {
     useJUnitPlatform()
+}
+
+repositories {
+    mavenCentral()
 }
