--- a/common-demo/build.gradle
+++ b/common-demo/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     api project(':common-redis')
     api project(':common-zk')
     api project(':common-rabbitmq')
+    api project(':common-mybatis')
 
     testCompile ("junit:junit:$junitVersion")
     compile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
