--- a/common-demo/build.gradle
+++ b/common-demo/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     api project(':common-zk')
     api project(':common-rabbitmq')
     api project(':common-mybatis')
+    api project(':common-es')
 
     testCompile ("junit:junit:$junitVersion")
     compile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
