--- a/settings.gradle
+++ b/settings.gradle
@@ -5,22 +5,22 @@ project(':common-demo').projectDir = file('common-demo')
 
 
 include ':common-api'
-project(':common-api').projectDir = file('common-api')
+project(':common-api').projectDir = file('common/common-api')
 
 include ':common-mybatis'
-project(':common-mybatis').projectDir = file('common-mybatis')
+project(':common-mybatis').projectDir = file('common/common-mybatis')
 
 include ':common-redis'
-project(':common-redis').projectDir = file('common-redis')
+project(':common-redis').projectDir = file('common/common-redis')
 
 include ':common-es'
-project(':common-es').projectDir = file('common-es')
+project(':common-es').projectDir = file('common/common-es')
 
 include ':common-util'
-project(':common-util').projectDir = file('common-util')
+project(':common-util').projectDir = file('common/common-util')
 
 include ':common-rabbitmq'
-project(':common-rabbitmq').projectDir = file('common-rabbitmq')
+project(':common-rabbitmq').projectDir = file('common/common-rabbitmq')
 
 include ':common-zk'
-project(':common-zk').projectDir = file('common-zk')
+project(':common-zk').projectDir = file('common/common-zk')
