--- a/common/common-generator/build.gradle
+++ b/common/common-generator/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
     api project(':common-util')
 
+    compile('mysql:mysql-connector-java:6.0.6')
+
 }
 
 publishing {
